# NDK-Socket-SHARE-BUFFER

./: README.md
AHardwareBuffer-IPC-Client/app/: CMakeLists.txt
AHardwareBuffer-IPC-Client/app/src/main/: AndroidManifest.xml
AHardwareBuffer-IPC-Client/app/src/main/cpp/: android_util.cpp  android_util.h  esShade.c  esUtil.h  outBuffer.cpp  outBuffer.h  render.cpp
AHardwareBuffer-IPC-Client/app/src/main/res/values/: strings.xml
AHardwareBuffer-IPC-Client/gradle/wrapper/: gradle-wrapper.properties
AHardwareBuffer-IPC-Server/app/: CMakeLists.txt  build.gradle
AHardwareBuffer-IPC-Server/app/src/main/: AndroidManifest.xml
AHardwareBuffer-IPC-Server/app/src/main/assets/lighting/: brick.tga  brickn.tga
AHardwareBuffer-IPC-Server/app/src/main/cpp/: IRemoteDevice.h  RemoteDisplay.cpp  RemoteDisplay.h  RemoteDisplayMgr.h  Shadow.c  android_log.h  android_util.cpp  android_util.h  display_protocol.h  esShapes.c  esTransform.c  esUtil.c  esUtil.h  esUtil_Android.c  offscreenRender.c  offscreenRender.h  outBuffer.cpp  outBuffer.h  server.cpp  socket.c  socket.h
AHardwareBuffer-IPC-Server/app/src/main/cpp/remote/: RemoteDisplay.cpp  RemoteDisplayMgr.cpp  RemoteDisplayMgr.h  display_protocol.h
AHardwareBuffer-IPC-Server/app/src/main/cpp/test_utils/: android_util.h  angleutils.cpp  angleutils.h  gl_raii.h  shader_utils.h  util_gl.h
AHardwareBuffer-IPC-Server/app/src/main/res/values/: strings.xml
AHardwareBuffer-IPC-Server/gradle/wrapper/: gradle-wrapper.properties
